--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -9,3 +9,8 @@ futures.workspace      = true
 tokio.workspace        = true
 futures-util.workspace = true
 thiserror.workspace    = true
+tokio-util.workspace   = true
+
+tracing-subscriber.workspace = true
+tracing.workspace            = true
+anyhow.workspace             = true
