--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 version = "0.1.0"
 
 [workspace.dependencies]
+# Sikkara Dependencies
+sikkara-core = { path = "./crates/core" }
 # Asynchronous Dependencies
 async-stream       = { version = "0.3.6" }
 async-trait        = { version = "0.1.88" }
@@ -18,6 +20,7 @@ reqwest            = { version = "0.12.19", default-features = false, features =
 tokio              = { version = "1.45.1", features = ["full"] }
 tokio-metrics      = { version = "0.4.2", features = ["metrics-rs-integration"] }
 tokio-rustls       = { version = "0.26.2" }
+tokio-tungstenite  = { version = "0.26.1", features = ["native-tls"] }
 tokio-stream       = { version = "0.1.17" }
 tokio-util         = { version = "0.7.15" }
 
