feat: implement coinbase adapter

--- a/crates/adapters/Cargo.toml
+++ b/crates/adapters/Cargo.toml
@@ -4,3 +4,16 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+# Sikkara Dependencies
+sikkara-core.workspace     = true
+sikkara-wsclient.workspace = true
+
+rust_decimal.workspace        = true
+serde.workspace               = true
+serde_json.workspace          = true
+tokio-tungstenite.workspace   = true
+jiff.workspace                = true
+tracing.workspace             = true
+tokio.workspace               = true
+rust_decimal_macros.workspace = true
+async-trait.workspace         = true
