--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ version = "0.1.0"
 
 [workspace.dependencies]
 # Sikkara Dependencies
-sikkara-core = { path = "./crates/core" }
+sikkara-core     = { path = "./crates/core" }
+sikkara-wsclient = { path = "./crates/wsclient" }
+sikkara-adapters = { path = "./crates/adapters" }
+
 # Asynchronous Dependencies
 async-stream       = { version = "0.3.6" }
 async-trait        = { version = "0.1.88" }
@@ -25,18 +28,19 @@ tokio-stream       = { version = "0.1.17" }
 tokio-util         = { version = "0.7.15" }
 
 # Miscellaneous External Dependencies
-anyhow         = { version = "1.0.98" }
-arbitrary      = { version = "1.0", features = ["derive"] }
-bs58           = { version = "0.5.1" }
-dec            = { version = "0.4.9", features = ["num-traits"] }
-derive_more    = { version = "2.0.1" }
-derive-getters = { version = "0.5.0" }
-hex            = { version = "0.4.3", features = ["serde"] }
-jiff           = { version = "0.2.8" }
-serde          = { version = "1.0.219" }
-serde_json     = { version = "1.0.140" }
-strum          = { version = "0.27.1", features = ["derive"] }
-thiserror      = { version = "1.0.31" }
+anyhow              = { version = "1.0.98" }
+arbitrary           = { version = "1.0", features = ["derive"] }
+bs58                = { version = "0.5.1" }
+rust_decimal        = { version = "1.36.0" }
+rust_decimal_macros = { version = "1.36.0" }
+derive_more         = { version = "2.0.1" }
+derive-getters      = { version = "0.5.0" }
+hex                 = { version = "0.4.3", features = ["serde"] }
+jiff                = { version = "0.2.8" }
+serde               = { version = "1.0.219", features = ["derive"] }
+serde_json          = { version = "1.0.140" }
+strum               = { version = "0.27.1", features = ["derive"] }
+thiserror           = { version = "1.0.31" }
 
 
 # Telemetry Dependencies
