--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -14,3 +14,6 @@ tokio-util.workspace   = true
 tracing-subscriber.workspace = true
 tracing.workspace            = true
 anyhow.workspace             = true
+serde.workspace              = true
+serde_json.workspace         = true
+jiff.workspace               = true
