--- a/crates/adapters/Cargo.toml
+++ b/crates/adapters/Cargo.toml
@@ -17,3 +17,5 @@ tracing.workspace             = true
 tokio.workspace               = true
 rust_decimal_macros.workspace = true
 async-trait.workspace         = true
+alloy.workspace               = true
+futures.workspace             = true
