feat: add computation of spot price from sqrt

--- a/crates/adapters/Cargo.toml
+++ b/crates/adapters/Cargo.toml
@@ -19,3 +19,4 @@ rust_decimal_macros.workspace = true
 async-trait.workspace         = true
 alloy.workspace               = true
 futures.workspace             = true
+fastnum.workspace             = true
