--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ jiff                = { version = "0.2.8" }
 serde               = { version = "1.0.219", features = ["derive"] }
 serde_json          = { version = "1.0.140" }
 strum               = { version = "0.27.1", features = ["derive"] }
+fastnum             = { version = "0.2.10" }
 thiserror           = { version = "1.0.31" }
 
 
