--- a/crates/arbitrager/Cargo.toml
+++ b/crates/arbitrager/Cargo.toml
@@ -18,3 +18,5 @@ serde_json.workspace          = true
 tokio-stream.workspace        = true
 jiff.workspace                = true
 futures.workspace             = true
+fastnum.workspace             = true
+alloy.workspace               = true
