--- a/crates/bot/Cargo.toml
+++ b/crates/bot/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name              = "sikkara-arbitrager"
+name              = "sikarra-bot"
 version.workspace = true
 edition.workspace = true
 
